tests/agl/rejections/type/partial_special_parse_json.agl
let parsed = parse_json(?)
parsed
